made home responsive, fixed App padding on small screen

--- a/src/components/HeaderTypingAnimation.css
+++ b/src/components/HeaderTypingAnimation.css
@@ -2,11 +2,6 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  left: 0;
   top: 0;
 }
 
@@ -19,6 +14,7 @@
   min-width: 100vw;
   position: absolute;
   top: 0;
+  left: 0;
   z-index: -1;
 }
 
@@ -35,7 +31,6 @@
   object-fit: contain;
   position: absolute;
   top: 0;
-  right: 50vw;
 }
 
 .logo-container{
@@ -84,9 +79,16 @@ p > b {
 }
 
 @media screen and (max-width: 768px) {
+  .header-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
   .header-container {
     min-height: 45vh;
-    justify-content: space-around;
+    justify-content: center;
   }
 
   .text-container > h1 {
@@ -97,14 +99,30 @@ p > b {
   .text-container > p {
     font-size: 30px;
   }
+
+  .logo-container{
+    margin-bottom: 1.0vw !important;
+  }
+
+  .logo-container #cLogo{
+    width: 200px;
+    margin-bottom: 0.5vw;
+  }
 }
 
 
 @media screen and (max-width: 650px) {
+  .header-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
   .header-container {
     min-height: 50vh;
-    width: 70%;
-    justify-content: space-around;
+    width: 75%;
+    justify-content: center;
 
   }
 
@@ -117,5 +135,9 @@ p > b {
   .text-container > p {
     font-size: 25px;
     font-weight: 500;
+  }
+
+  .logo-container #cLogo{
+    width: 150px;
   }
 }
